--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "\n",
     "    return list(map(lambda x:term_output(x,x_value),list_of_terms))\n",
-    "\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
     "\n",
     "    pass"
    ]
