--- a/index.ipynb
+++ b/index.ipynb
@@ -183,15 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
     "\n",
-    "    return list(map(lambda x:term_output(x,x_value),list_of_terms))\n",
-    "outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "\n",
+    "    return sum(list(map(lambda x:term_output(x,x_value),list_of_terms)))\n",
     "    pass"
    ]
   },
