--- a/index.ipynb
+++ b/index.ipynb
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,9 +645,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "091ff57c-02f0-11e9-9604-5bfc32db8176",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "091ff87e-02f0-11e9-9604-5bfc32db8176",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "091ffa68-02f0-11e9-9604-5bfc32db8176",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {
+        "title": "4x + 15"
+       }
+      },
+      "text/html": [
+       "<div id=\"1af4f923-f375-4485-81b4-6d8a13435201\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1af4f923-f375-4485-81b4-6d8a13435201\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"092f10de-02f0-11e9-9604-5bfc32db8176\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"092f1336-02f0-11e9-9604-5bfc32db8176\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"092f1476-02f0-11e9-9604-5bfc32db8176\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"1af4f923-f375-4485-81b4-6d8a13435201\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1af4f923-f375-4485-81b4-6d8a13435201\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"092f10de-02f0-11e9-9604-5bfc32db8176\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"092f1336-02f0-11e9-9604-5bfc32db8176\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"092f1476-02f0-11e9-9604-5bfc32db8176\"}], {\"title\": \"4x + 15\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import plot, trace_values\n",
     "\n",
